--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="ECell-LNCT">
+        <meta name="author" content="Ashwani Kumar">
         <title>Enterpreneurship Cell LNCT Bhopal</title>
-        <!--krefolio
-
-        -->
-
-
-
+ 
         <link rel="stylesheet" href="krefolio/css/bootstrap.css">
         <link rel="stylesheet" href="css/animate.min.css">
 
@@ -49,14 +44,8 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
-
-        <link rel="shortcut icon" href="../favicon.ico">
-
         <link rel="stylesheet" type="text/css" href="css11/effect2.css" />
-
         <link rel="stylesheet" href="css/normalize.css">
-
-
         <link rel="stylesheet" href="css/style.css">
         <script src="js11/modernizr.custom.js"></script>
         <style>
